--- a/index.html
+++ b/index.html
@@ -49,5 +49,4 @@
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
 </body>
-</html>]]></content>
-</change>
+</html>
